fix: add margin-bottom for tab caption to hide scrollbar

--- a/assets/css/page.css
+++ b/assets/css/page.css
@@ -220,6 +220,7 @@ figcaption>.caption, table caption.caption{
 }
 table caption.caption {
     caption-side: bottom;
+    margin-bottom: 5px;
 }
 
 /* fancybox */
